<resources>
    <string name="app_name">绩点快查</string>
    <string name="ic_launch">绩点快查</string>
    <string name="number"> 学号</string>
    <string name="password">密码</string>
    <string name="hint_number">请输入学号</string>
    <string name="hint_password">请输入密码</string>
    <string name="empty_user">学号不能为空！</string>
    <string name="empty_pass">密码不能为空!</string>
    <string name="check_savepass">保存密码</string>
    <string name="btn_lookup">查询</string>
    <string name="tv_forget">forget your password</string>
    <string name="hint_loading">正在加载</string>
    <string name="action_settings">Settings</string>
    <drawable name="clr_normal">#18bb18</drawable>
    <drawable name="clr_pressed">#077c07</drawable>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="copyright">我们只是信息的搬运工,不用担心密码泄露</string>





    <string name="id_key">ccac8a77973ddc362fbab135fe12a7c4</string>
</resources>
